--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -1,4 +1,13 @@
 dependencies:
+- name: albus
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.33
+- name: asterix
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 2.2.73
+- name: ether
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 0.0.22
 - name: exposecontroller
   version: 2.3.89
   repository: http://chartmuseum.jenkins-x.io
