--- a/env/requirements.yaml
+++ b/env/requirements.yaml
@@ -16,3 +16,9 @@ dependencies:
   version: 2.3.89
   repository: http://chartmuseum.jenkins-x.io
   alias: cleanup
+- name: search-configurator
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 2.6.5
+- name: wingman
+  repository: http://jenkins-x-chartmuseum:8080
+  version: 2.0.9
